--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.2",
-    "react-micro-bar-chart": "^1.1.0"
+    "react-micro-bar-chart": "^1.1.0",
+    "react-sparklines": "^1.6.0"
   }
 }
