--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "chart.js": "^2.3.0",
     "excel-data": "^2.0.4",
     "griddle-react": "^0.7.0",
+    "gsap": "^1.19.0",
     "meteor-node-stubs": "~0.2.0",
     "node-watch": "^0.4.1",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
+    "react-addons-transition-group": "^15.3.2",
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.2",
     "react-micro-bar-chart": "^1.1.0",
