--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-addons-transition-group": "^15.3.2",
+    "react-button": "^1.2.1",
     "react-chartjs": "^0.8.0",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^15.3.2",
     "react-micro-bar-chart": "^1.1.0",
     "react-sparklines": "^1.6.0"
